# financial-manager

./: .gitignore  README.md  check list.txt  pyproject.toml
finance_manager/: bot.py  config.py  db.py  dispatcher.py  filters.py  main.py  personal_actions.py  statistic.py
finance_manager/DB_FM/: account.db
finance_manager/handlers/: courses.py
