[tool.poetry]
name = "finance-manager"
version = "0.1.0"
description = ""
authors = ["Maksim Berezovik <9641650@gmail.com>"]
readme = "README.md"
packages = [{include = "finance_manager"}]

[tool.poetry.dependencies]
python = "^3.10.8"
aiogram = "^2.25.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
coverage = {extras = ["toml"], version = "^7.2.1"}
devtools = {extras = ["pygments"], version = "^0.10.0"}
flake8 = "^6.0.0"
flake8-annotations-complexity = "^0.0.7"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.2.13"
flake8-builtins = "^2.1.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.10.1"
flake8-debugger = "^4.1.2"
flake8-executable = "^2.1.3"
flake8-expression-complexity = "^0.0.11"
flake8-fixme = "^1.1.1"
flake8-isort = "^6.0.0"
flake8-multiline-containers = "^0.0.19"
flake8-mutable = "^1.2.0"
flake8-pep3101 = "^2.0.0"
flake8-print = "^5.0.0"
flake8-printf-formatting = "^1.1.2"
flake8-simplify = "^0.19.3"
flake8-variables-names = "^0.0.5"
greenlet = "^2.0.2"
httpie = "^3.2.1"
ipython = "^8.10.0"
isort = "^5.12.0"
mkdocs-material = "^9.0.15"
mypy = "^1.0.1"
pep8-naming = "^0.13.3"
pudb = "^2022.1.3"
pytest = "^7.2.1"
pytest-anyio = "^0.0.0"
pytest-cov = "^4.0.0"
pytest-httpx = "^0.21.3"
pytest-mock = "^3.10.0"


# ~~~~ black ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[tool.black]
line-length = 79
target-version = ["py310"]
include = '^.+\.pyi?$'
extend-exclude = '''
(
    .*\.local.*
    .*\.idea.*
    | .*\.vscode.*
)
'''

# ~~~~ isort ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[tool.isort]
force_single_line = true
line_length = 79
multi_line_output = 3
profile = "black"
skip = [
    ".local",
]


# ~~~~ pytest ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[tool.pytest.ini_options]
addopts = "--cov --cov-branch"
cache_dir = ".local/pytest/"
console_output_style = "count"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "integration",
    "unit",
]
testpaths = [
    "tests",
]

# ~~~~ mypy ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[tool.mypy]
cache_dir = ".local/mypy/"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude=[".local/*",]
files = ["tests", "finance_manager"]
no_implicit_optional = true
pretty = true
python_version = "3.10"
show_error_context = true
sqlite_cache = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
